[package]
name = "tyme4rs"
version = "1.3.3"
edition = "2021"
authors = ["6tail <6tail@6tail.cn>"]
description = "Tyme是一个非常强大的日历工具库，可以看作 Lunar 的升级版，拥有更优的设计和扩展性，支持公历、农历、藏历、星座、干支、生肖、节气、法定假日等。"
documentation = "https://6tail.cn/tyme.html"
homepage = "https://6tail.cn/tyme.html"
repository = "https://github.com/6tail/tyme4rs"
license = "MIT"
keywords = ["Solar", "Lunar", "SixtyCycle", "SolarTerm"]

[dependencies]
lazy_static = "1.5.0"
regex = "1.11.1"
atomic_refcell = "0.1.13"
